--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,3 +1,5 @@
+<body class="assign-show"></body>
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -20,5 +22,4 @@
 <% end %>
 <%= link_to 'Back', assignments_path %>
 
-<h5>Warning: you can create a new job but only the ship owner/captain can edit the job or transfer jobs to another ship!!! Jobs are owned by the ship Captain!!!</h5>
 
