--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -47,6 +47,24 @@ li {
   list-style-type: none;
 }
 
+.page-container {
+  position: relative;
+  min-height: 95vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem; /* Footer height */
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 2.5rem; /* Footer height */
+}
+
 .droidmail {
   color: rgb(13, 13, 241);
 }
