--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <th>Ship</th>
       <th>Job</th>
-      <th>Ship Owner/Captain</th>
+      <th>Ship Captain</th>
       <th colspan="3"></th>
     </tr>
   </thead>
