--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,11 +9,10 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Description</th>
-      <th>Origin</th>
-      <th>Destination</th>
+      <th>Desc.</th>
+      <th>Dest.</th>
       <th>Cost</th>
-      <th>Captain</th>
+      <th>Capt.</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,7 +22,6 @@
       <tr>
         <td><%= job.name %></td>
         <td><%= job.description %></td>
-        <td><%= job.origin %></td>
         <td><%= job.destination %></td>
         <td><%= job.cost %></td>
         <td><%= job.user.email %></td>
